# randomyt-server

./: TODO.md  main.py  pyproject.toml  requirements.txt
bot/: discord_bot.py  matrix_bot.py
common/: config.py  ioc.py
common/utils/: genid.py  scriptscrapper.py  search_and_insert.py  youtube_video_id_validator.py
db/: client.py
models/controller/input/: array_of_ids.py  publish_video_request.py  query_params.py  search_query_params.py  task_search_request.py
models/controller/output/: meta_model.py  page_model.py  video_controller.py
models/db/: task_db_schema.py  video_db_schema.py
models/domain/: video_model.py
repository/: TaskRepository.py  VideoRepository.py
service/: TaskService.py  VideoService.py
