[tool.poetry]
name = "videosrecomendados"
version = "0.1.0"
description = ""
authors = ["Lueyo <84575656+lueyo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {version = "0.116.2", extras = ["standard"]}
pymongo = "4.15.3"
numpy = "2.3.3"
motor = "3.7.1"
requests = "2.32.5"
beautifulsoup4 = "4.14.2"
annotated-types = "0.7.0"
anyio = "4.11.0"
certifi = "2025.10.5"
charset-normalizer = "3.4.4"
click = "8.3.0"
colorama = "0.4.6"
dnspython = "2.8.0"
email-validator = "2.3.0"
fastapi-cli = {version = "0.0.13", extras = ["standard"]}
fastapi-cloud-cli = "0.3.1"
h11 = "0.16.0"
httpcore = "1.0.9"
httptools = "0.7.1"
httpx = "0.28.1"
idna = "3.10"
jinja2 = "3.1.6"
markdown-it-py = "4.0.0"
markupsafe = "3.0.3"
mdurl = "0.1.2"
pydantic-core = "2.41.1"
pydantic = {version = "2.12.0", extras = ["email"]}
pygments = "2.19.2"
python-dotenv = "1.1.1"
python-multipart = "0.0.20"
pyyaml = "6.0.3"
rich-toolkit = "0.15.1"
rich = "14.2.0"
rignore = "0.7.0"
sentry-sdk = "2.41.0"
shellingham = "1.5.4"
sniffio = "1.3.1"
soupsieve = "2.8"
starlette = "0.48.0"
typer = "0.19.2"
typing-extensions = "4.15.0"
typing-inspection = "0.4.2"
urllib3 = "2.5.0"
uvicorn = {version = "0.37.0", extras = ["standard"]}
uvloop = "0.21.0"
watchfiles = "1.1.0"
websockets = "15.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
